--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-star-rating-component": "^1.4.1",
     "rechart": "0.0.1",
     "recharts": "^2.0.9",
     "socket.io-client": "^4.1.2",
